--- a/LSM/LSM.csproj
+++ b/LSM/LSM.csproj
@@ -300,6 +300,8 @@
     <Content Include="Views\Student\Index.cshtml" />
     <Content Include="Views\Student\Module.cshtml" />
     <Content Include="Views\Student\Activity.cshtml" />
+    <Content Include="Views\Activities\Index2.cshtml" />
+    <Content Include="Views\Activities\Edit2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
