Removed files from project

--- a/LSM/Web.config
+++ b/LSM/Web.config
@@ -24,6 +24,10 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="On" defaultRedirect="~/Courses/Index">
+        <error statusCode="404" redirect="~/Courses/Index"/>
+    <error statusCode="400" redirect="~/Courses/Index"/>
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
